--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+body {
+    background-image: url("/background.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#search-box {
+    margin-top: 10em;
+    margin-left: auto;
+    margin-right: auto;
+}
