--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
     <nav class="navbar navbar-inverse navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Listings</a>
+          <a class="navbar-brand" href="#"><%= t('main_title') %></a>
         </div>
         <ul class="nav navbar-nav navbar-dark" style="margin-left: auto;">
           <li style="margin-right: 1em;">
-            <a href="#"><button type="button" class="btn btn-info">login</button></a>
+            <a href="#"><button type="button" class="btn btn-info"><%= t('login_btn') %></button></a>
           </li>
           <div class="">
             <select onchange="window.location.href=this.value" class="form-control">
@@ -34,7 +34,7 @@
              <% end %>
             </select>
           </div>
-          <li class="col-xs-2" style="margin-left:1em;" ><a href="#"><button type="button" class="btn btn-success">Create my Listing</button></a></li>
+          <li class="col-xs-2" style="margin-left:1em;" ><a href="#"><button type="button" class="btn btn-success"><%= t('create_ad_btn') %></button></a></li>
         </ul>
       </div>
     </nav>
