--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,11 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+#registration-box {
+    margin-top: 10em;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    text-align: center;
+}
