--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,15 @@
     <nav class="navbar navbar-inverse navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><%= t('main_title') %></a>
+          <%= link_to t('main_title'), root_path , method: :get, class: "navbar-brand" %>
         </div>
         <ul class="nav navbar-nav navbar-dark" style="margin-left: auto;">
           <li style="margin-right: 1em;">
-            <a href="#"><button type="button" class="btn btn-info"><%= t('login_btn') %></button></a>
             <% if user_signed_in? %>
-              <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-info" %>
+              <%= link_to t('logout_btn'), destroy_user_session_path, method: :delete, class: "btn btn-info" %>
             <% else %>
               <%= link_to t('login_btn'), new_user_session_path, class: "btn btn-info" %>
-              <%= link_to 'SignUp', new_user_registration_path, class: "btn btn-info" %>
+              <%= link_to t('sign_up_btn'), new_user_registration_path, class: "btn btn-info" %>
             <% end %>
           </li>
           <div class="">
