--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -13,3 +13,7 @@
     </div><!-- /.col-lg-6 -->
   </div><!-- /.row -->
 </div>
+
+<div class="row">
+  <div class="col-md-3"><%= link_to t("account.profil"), edit_user_registration_path  %></div>
+</div>
