--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,7 @@
+<div class="row">
+  <div class="col-md-3"><%= link_to t("account.profil"), edit_user_registration_path  %></div>
+</div>
+
 <div class="container">
   <div id="registration-box" class="row">
     <div class="col-md-6">
