--- a/app/views/account/dashboard/index.html.erb
+++ b/app/views/account/dashboard/index.html.erb
@@ -2,8 +2,8 @@
   <div style="text-align: center; color: white">
     <h1>Dashboard</h1>
     <div >
-      Nbr Users
-      <%= @data.users_count %>
+      Users
+      <%= current_user.email %>
     </div>
     <div >
       Nbr products
