--- a/app/views/account/products/new.html.erb
+++ b/app/views/account/products/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div style="margin:auto; color:white;">
     <%= form_tag account_products_path, method: :post, multipart: true, class: 'form' do %>
       <%= render partial: 'form' %>
     <% end %>
